test/tests/InstanceMethodOnClass2.expected
InstanceMethodOnClass2.frost:7:40: error: method anonymous.InstanceMethodOnClass2.instance() expects 1 argument, but found 0
1 error
