test/tests/InstanceMethodOnClass2.frost
class InstanceMethodOnClass2 {
    method instance() {
    }

    @class
    method main() {
        InstanceMethodOnClass2.instance()
    }
}